Solving Button overlapping  issue #1085

--- a/_sass/calendar.scss
+++ b/_sass/calendar.scss
@@ -21,4 +21,7 @@
       background-color: var(--brand-color-primary) !important;
     }
   }
+  .fc-prev-button,.fc-next-button,.fc-today-button{
+    margin: 5px;
+  }
 }
